# bloom-clip-editor

./: .gitignore  README.md  export.html  export_renderer.js  index.html  main.js  package-lock.json  package.json  renderer.js  styles.css
renderer/: diagnostics.js  drag_trim.js  export.js  import.js  init.js  keyboard.js  menus_settings.js  playback_loop.js  preview_quality.js  route_preview.js  scrubbing.js  snapping.js  split_delete.js  timeline_rendering.js  utils.js  waveform_decoding.js  webaudio_mix.js  wheel.js
scripts/: gen-icon.mjs  prepare-ffmpeg.mjs  prepare-vapoursynth.mjs
src/: index.html  styles.css
src-tauri/: Cargo.toml  RUNTIME_NOTICES.md  rife_blur.vpy  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: export.rs  ffmpeg.rs  main.rs
src/js/: boot.js  clippanel.js  exportui.js  interactions.js  keyboard.js  main.js  maskeditor.js  media.js  player.js  project.js  state.js  tauri.js  textpanel.js  timeline.js  utils.js
